--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -12,3 +12,23 @@ input::-webkit-inner-spin-button {
 input[type=number] {
   -moz-appearance: textfield;
 }
+
+
+
+/* dark mode scrollbar */
+::-webkit-scrollbar{
+  width: 5px;
+}
+
+/* ::-webkit-scrollbar-track{
+  background: #555;
+} */
+::-webkit-scrollbar-thumb{
+  background: #4d4c4c;
+  border-radius: 5px;
+  
+}
+
+/* ::-webkit-scrollbar-thumb-hover{
+  background: #242424;
+} */
